spacing fixed?

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ nav .navlinks li a{
 }
 .hero-text h5{
   color:#000;
-  font-size: 20;
+  font-size: 20px;
 }
 .hero-text h5 span{
   color:#AA142D;
@@ -194,7 +194,7 @@ nav .navlinks li a{
 }
 .hero-text h1{
   color: #AA142D;
-  font-size: 28;
+  font-size: 28px;
 }
 .hero-text p{
   color:#000;
@@ -208,31 +208,31 @@ nav .navlinks li a{
 }
 .btn-group .btn{
   border-color: #AA142D;
-  color:#888;
-  background-color: #e5e5e5;
+  color:#111;
+  background-color: #f2f2f2;
   padding: 12px 25px;
   margin: 5px 0px;
   margin-right:7px;
   border-radius: 30px;
   border:2px solid #000;
   box-shadow:  0 10px 10px -8px rgb(0 0 0 / 78%);
+  font-family: inherit;  /* ← inherits from body or parent */
 }
 .btn.active{
   border-color: #AA142D;
 }
-
-.btn.hover{
-  color: #e5e5e5;
-  transform: scale(1.2);
-  transition: 0.5s;
+.btn.secondary-btn {
+  border-color: #AA142D;
+  background-color: #f2f2f2;
+  color: #111;
+  cursor: pointer;
 }
 
 
 
 
 
-
-/* Respnosiv design & displaying navbar for small screen */
+/* Responsive design & displaying navbar for small screen */
 @media(max-width:930px)
 {
   nav .togglebtn{
